# OpenDash

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PROJECT_SETUP_COMPLETE.md  README.md  conanfile.txt  conanprofile  pyproject.toml
.github/actions/setup-build-env/: action.yml
.github/workflows/: ci-cd.yml  test-history.yml
docker/: Dockerfile  docker-compose.yml
docs/: debug_mermaid.py  debugging.md  docker_setup.md  index.md  requirements.txt  serve_docs.py  tiger_style_cpp.md
docs/architecture/: index.md
docs/deployment/: docker.md  github-actions.md
docs/development/: build_process.md  cleanup_guide.md  cmake_architecture.md  cmake_guide.md  scripts.md  setup.md
docs/guides/: github-actions-quickstart.md  logging.md  python-uv.md  testing.md
include/dashcam/: grpc_service.h
include/dashcam/utils/: config_parser.h  logger.h
proto/: dashcam.proto
scripts/: build.ps1  build.sh  clean.ps1  clean.sh  docker_build.sh  docker_run.sh  setup.ps1  setup.sh  test.ps1  test.sh
src/: CMakeLists.txt  main.cpp
src/grpc/: dashcam_service_impl.cpp  dashcam_service_impl.h  grpc_service.cpp
src/utils/: config_parser.cpp  logger.cpp
tests/: CMakeLists.txt
tests/reports/: pytest-report.html  pytest-report.json
tests/system/: requirements.txt  test_dashcam_system.py
tests/system/tests/reports/: pytest-report.html  pytest-report.json
tests/unit/: test_grpc_integration.cpp  test_logger.cpp  test_main.cpp
